--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -17,8 +17,24 @@ jobs:
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{secrets.DOCKER_ACCESS_TOKEN}}
 
-    - uses: actions/setup-java@v4
+    - name: Java Setup
+      uses: actions/setup-java@v2
       with:
         java-version: '21'
-        distribution: 'temurin'
+        distribution: 'adopt'
         cache: maven
+
+    - name: Build Application Jar
+      working-directory: ./rest-with-spring-boot-and-java-erudio/rest-with-springboot-erudio
+      run: mvn clean package
+
+    - name: Docker Compose Build
+      working-directory: ./rest-with-spring-boot-and-java-erudio
+      run: docker compose build
+
+    - name: Push to Docker Hub Container Registry
+      run: |
+        docker tag ${{secrets.DOCKER_USERNAME}}/rest-with-springboot-erudio:latest ${{secrets.DOCKER_USERNAME}}/rest-with-springboot-erudio:${{ github.run_id }}
+        
+        docker push ${{secrets.DOCKER_USERNAME}}/rest-with-springboot-erudio:latest
+        docker push ${{secrets.DOCKER_USERNAME}}/rest-with-springboot-erudio:${{github.run_id}}
