--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -18,10 +18,10 @@ jobs:
         password: ${{secrets.DOCKER_ACCESS_TOKEN}}
 
     - name: Java Setup
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v4
       with:
-        java-version: '24'
-        distribution: 'adopt'
+        java-version: '21'
+        distribution: 'temurin'
         cache: maven
 
     - name: Build Application Jar
