--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -25,6 +25,7 @@ jobs:
         cache: maven
 
     - name: Build Application Jar
+      working-directory: ./rest-with-springboot-erudio
       run: mvn clean package
 
     - name: Docker Compose Build
