--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,21 @@ services:
       - db
     networks:
       - erudio_network
+
+  portainer:
+    image: portainer/portainer-ce:latest
+    restart: always
+    ports:
+      - 9000:9000
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+    networks:
+      - erudio_network
+
+volumes:
+  portainer_data:
+
 networks:
   erudio_network:
     driver: bridge
