--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -24,9 +24,10 @@ jobs:
         aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
         aws-region: ${{secrets.AWS_DEFAULT_REGION}}
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v2
+    - name: Manual Amazon ECR Login
+      run: |
+        aws ecr get-login-password --region ${{ secrets.AWS_DEFAULT_REGION }} \
+        | docker login --username AWS --password-stdin ${{ secrets.IMAGE_REPO_URL }}
 
     - name: Java Setup
       uses: actions/setup-java@v4
@@ -37,7 +38,7 @@ jobs:
 
     - name: Build Application Jar
       working-directory: ./rest-with-springboot-erudio
-      run: mvn clean package -DskipTests
+      run: mvn clean package
 
     - name: Docker Compose Build
       run: docker compose build
