--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -24,10 +24,12 @@ jobs:
         aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
         aws-region: ${{secrets.AWS_DEFAULT_REGION}}
 
-    - name: Manual Amazon ECR Login
-      run: |
-        aws ecr get-login-password --region ${{ secrets.AWS_DEFAULT_REGION }} \
-        | docker login --username AWS --password-stdin ${{ secrets.IMAGE_REPO_URL }}
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v2
+
+    - name: Test ECR Auth
+      run: aws ecr get-login-password --region ${{ secrets.AWS_DEFAULT_REGION }} | docker login --username AWS --password-stdin ${{ secrets.IMAGE_REPO_URL }}
 
     - name: Java Setup
       uses: actions/setup-java@v4
