--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -28,8 +28,10 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
-    - name: Test ECR Auth
-      run: aws ecr get-login-password --region ${{ secrets.AWS_DEFAULT_REGION }} | docker login --username AWS --password-stdin ${{ secrets.IMAGE_REPO_URL }}
+    - name: Ensure ECR Login (Corrected)
+      run: |
+        aws ecr get-login-password --region ${{ secrets.AWS_DEFAULT_REGION }} | \
+        docker login --username AWS --password-stdin 829007908339.dkr.ecr.us-east-2.amazonaws.com
 
     - name: Java Setup
       uses: actions/setup-java@v4
