--- a/rest-with-springboot-erudio/src/main/resources/application.yml
+++ b/rest-with-springboot-erudio/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 80
+  port: 8080
 cors:
   originPatterns: http://localhost:8080,http://localhost:3000,https://www.erudio.com.br
 file:
@@ -19,7 +19,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${JDBC_URL}
     username: root
-    password: admin123!
+    password: Admin123!
   jpa:
     hibernate:
       ddl-auto: none
