Continuous Deployment with Github, Github Actions, Google Artifact Registry and Google Cloud Run

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Deploy to Google Cloud Run
       run: |
         gcloud run deploy rest-with-springboot-erudio \
-          --image ${{secrets.DOCKER_USERNAME}}/rest-with-springboot-erudio:latest ${{secrets.REGISTRY_INFO}}/erudio-registry/rest-with-springboot-erudio:latest \
+          --image ${{secrets.REGISTRY_INFO}}/erudio-registry/rest-with-springboot-erudio:latest \
           --region europe-west1 \
           --platform managed \
           --allow-unauthenticated
